# secret

./: .gitignore  CMakeLists.txt  README.md  TODO  main.cpp  model.cpp  model.h
resources/: model.h  testparser.cpp  text_data
